[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["tagarasu"]
packages = [
    {include = "models"},
    {include = "schemas"},
    {include = "core"},
    {include = "db"}
]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.5"
pandas = "^1.5.2"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
mypy = "^1.0.1"
asyncpg = "^0.27.0"
fastapi-users = {extras = ["sqlalchemy"], version = "^10.4.1"}

[tool.poetry.group.api]
optional = true

[tool.poetry.group.api.dependencies]
fastapi = "^0.86.0"
uvicorn = {extras = ["standard"], version = "^0.19.0"}
alembic = "^1.8.1"
python-dotenv = "^0.21.0"
psycopg2 = "^2.9.5"
fastapi-users = {extras = ["sqlalchemy"], version = "^10.4.1"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.7"}
pyyaml = "^6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
